tooling/nargo_cli/tests/snapshots/execution_failure/regression_10967/execute__tests__brillig_stderr.snap
---
source: tooling/nargo_cli/tests/execute.rs
expression: stderr
---
warning: variable does not need to be mutable
  ┌─ src/main.nr:2:13
  │
2 │     let mut unit_array: [(); 1] = [()];
  │             ----------
  │

error: Assertion failed: Index out of bounds
  ┌─ src/main.nr:3:5
  │
3 │     unit_array[3];
  │     -------------
  │
  = Call stack:
    1. src/main.nr:3:5

Failed assertion
